# dbface

./: README.md  pyproject.toml
dbface_package/: Dockerfile  app.py  common.py  dbface_lib.py  docker_instructions  main_openvino.py  requirements.txt
dbface_package/FP16/: dbface.mapping  dbface.xml
tests/: conftest.py  test_videos.py
